# PureDarwin

./: CMakeLists.txt
.github/workflows/: multiconfig.yml
cmake/: crosscompile.cmake  kext.cmake  mig.cmake
src/: CMakeLists.txt
src/Frameworks/: CMakeLists.txt  README.md
src/Frameworks/IOI2C/: IOI2C.c  IOI2C.h
src/Kernel/Extensions/: CMakeLists.txt
src/Kernel/Extensions/AppleI386GenericPlatform/: CMakeLists.txt
src/Kernel/Extensions/AppleIntelPIIXATA/: CMakeLists.txt
src/Kernel/Extensions/ApplePS2Controller/: CMakeLists.txt
src/Kernel/Extensions/AppleSMBIOS/: AppleSMBIOS.cpp  AppleSMBIOS.h  CMakeLists.txt  Info.plist  SMBIOS.h
src/Kernel/Extensions/IOACPIFamily/: CMakeLists.txt
src/Kernel/Extensions/IOATAFamily/: CMakeLists.txt
src/Kernel/Extensions/IOATAFamily/include/IOKit/ata/: IOATATypes.h
src/Kernel/Extensions/IOGraphicsFamily/: CMakeLists.txt  GTrace.hpp  IOFramebuffer.cpp
src/Kernel/Extensions/IOGraphicsFamily/GTrace/: GTrace.hpp
src/Kernel/Extensions/IOGraphicsFamily/include/IOKit/graphics/: IOFramebufferPrivate.h  IOGraphicsTypesPrivate.h
src/Kernel/Extensions/IOGraphicsFamily/include/IOKit/graphics/tl/: osmemory  osutility
src/Kernel/Extensions/IOHIDFamily/: CMakeLists.txt
src/Kernel/Extensions/IOHIDFamily/IOHIDFamily/: CMakeLists.txt  Info.plist
src/Kernel/Extensions/IOI2CFamily/: CMakeLists.txt  IOI2CBus.cpp  IOI2CController.cpp  IOI2CDevice.cpp  IOI2CService.cpp  IOI2CUserClient.cpp  Info.plist
src/Kernel/Extensions/IOI2CFamily/include/IOKit/i2c/: IOI2CBus.h  IOI2CController.h  IOI2CDefs.h  IOI2CDevice.h  IOI2CService.h  IOI2CUserClient.h
src/Kernel/Extensions/IONDRVSupport/: CMakeLists.txt
src/Kernel/Extensions/IOPCIFamily/: CMakeLists.txt
src/Kernel/Extensions/IOStorageFamily/: CMakeLists.txt
src/Kernel/Extensions/IOUSBFamily/: CMakeLists.txt
src/Kernel/Extensions/IOUSBFamily/IOUSBFamily/: CMakeLists.txt  Info.plist
src/Kernel/Extensions/IOUSBFamily/IOUSBUserClient/: CMakeLists.txt  IOUSBDeviceUserClient.cpp  Info.plist
src/Kernel/Extensions/corecrypto/: CMakeLists.txt
src/Kernel/Extensions/pthread/: CMakeLists.txt
src/Kernel/libfirehose_kernel/: CMakeLists.txt
src/Kernel/libkmod/: CMakeLists.txt
src/Kernel/xnu/: CMakeLists.txt
src/Kernel/xnu/cmake/: MakeInc.cmd.in  MakeInc.def.in
src/Libraries/CrashReporterClient/: CMakeLists.txt
src/Libraries/libSystem/libsystem_kernel/: CMakeLists.txt
src/Utilities/: README.md
