add_subdirectory(AppleAPIC)
add_subdirectory(AppleI386GenericPlatform)
add_subdirectory(AppleIntelPIIXATA)
add_subdirectory(ApplePS2Controller)
add_subdirectory(AppleSMBIOS)
add_subdirectory(IOACPIFamily)
add_subdirectory(IOATAFamily)
#add_subdirectory(IOGraphicsFamily) BROKEN - MISSING PROTOTYPES & DEFINITIONS
#add_subdirectory(IOHIDFamily) BROKEN - NO IIG
add_subdirectory(IOI2CFamily)
#add_subdirectory(IONDRVSupport) BROKEN - IOGRAPHICS
add_subdirectory(IOPCIFamily)
add_subdirectory(IOStorageFamily)
add_subdirectory(IOUSBFamily)
add_subdirectory(corecrypto)
add_subdirectory(pthread)
